Added validation for overlapping claims. Adjusted tabbing order in Register, Create and Edit Assistant views. Added default information for percentages in Create Assistant view.

--- a/Sjuklöner/Views/Account/Register.cshtml
+++ b/Sjuklöner/Views/Account/Register.cshtml
@@ -4,11 +4,11 @@
 
     ViewBag.Title = "Registrera ett nytt bolag";
 }
-<div class="row">
+<div class="row row-padding2">
     <p class="col col-md-2"></p>
     <p class="page-header7 col col-md-10">Registrera ombud och bolagsuppgifter</p>
 </div>
-<div class="row">
+<div class="row row-padding2">
     <p class="col col-md-2"></p>
     <p class="col col-md-10">Uppgifterna används vid ansökan om sjuklöneersättning</p>
 </div>
@@ -22,142 +22,137 @@
         <div class="col col-md-4 bold-24">Bolagsuppgifter</div>
     </div>
     <div class="row row-padding2">
-        <div>
-            @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
-            <div class="col col-md-4">
-                @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-        <div>
-            @Html.LabelFor(model => model.CompanyName, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
-            <div class="col col-md-4">
-                @Html.EditorFor(model => model.CompanyName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CompanyName, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-    </div>
-
-    <div class="row row-padding2">
-        <div>
-            @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
-            <div class="col col-md-4">
-                @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-        <div>
-            @Html.LabelFor(model => model.CompanyOrganisationNumber, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
-            <div class="col col-md-4">
-                @Html.EditorFor(model => model.CompanyOrganisationNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CompanyOrganisationNumber, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-    </div>
-
-    <div class="row row-padding2">
-        <div>
-            @Html.LabelFor(model => model.SSN, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
-            <div class="col col-md-4">
-                @Html.EditorFor(model => model.SSN, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SSN, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-        <div>
-            @Html.LabelFor(model => model.CompanyPhoneNumber, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
-            <div class="col col-md-4">
-                @Html.EditorFor(model => model.CompanyPhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CompanyPhoneNumber, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-    </div>
-
-    <div class="row row-padding2">
-        <div>
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
-            <div class="col col-md-4">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-        <div>
-            @Html.LabelFor(model => model.StreetAddress, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
-            <div class="col col-md-4">
-                @Html.EditorFor(model => model.StreetAddress, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.StreetAddress, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-    </div>
-
-    <div class="row row-padding2">
-        <div>
-            @Html.LabelFor(model => model.OmbudPhoneNumber, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
-            <div class="col col-md-4">
-                @Html.EditorFor(model => model.OmbudPhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.OmbudPhoneNumber, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-        <div>
-            @Html.LabelFor(model => model.Postcode, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
-            <div class="col col-md-4">
-                @Html.EditorFor(model => model.Postcode, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Postcode, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-    </div>
-
-    <div class="row row-padding2">
-        <div>
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
-            <div class="col col-md-4">
-                @Html.PasswordFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-        <div>
-            @Html.LabelFor(model => model.City, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
-            <div class="col col-md-4">
-                @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.City, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-    </div>
-
-    <div class="row row-padding2">
-        <div>
-            @Html.LabelFor(model => model.ConfirmPassword, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
-            <div class="col col-md-4">
-                @Html.PasswordFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-        <div>
-            @Html.LabelFor(model => model.AccountNumber, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
-            <div class="col col-md-4">
-                @Html.EditorFor(model => model.AccountNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AccountNumber, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-    </div>
-
-    <div class="row row-padding2">
         <div class="col col-md-6">
-        </div>
-        <div>
-            @Html.LabelFor(model => model.CollectiveAgreements, htmlAttributes: new { @class = "control-label col-md-2 display-right-align3" })
-            <div class="col-md-4">
-                @Html.DropDownListFor(model => model.SelectedCollectiveAgreementId, new SelectList(Model.CollectiveAgreements, "Value", "Text", Model.SelectedCollectiveAgreementId), new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CollectiveAgreements, "", new { @class = "text-danger font-size-11" })
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.SSN, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.EditorFor(model => model.SSN, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.SSN, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.OmbudPhoneNumber, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.EditorFor(model => model.OmbudPhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.OmbudPhoneNumber, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.PasswordFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.ConfirmPassword, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.PasswordFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger font-size-11" })
+                </div>
             </div>
         </div>
-    </div>
-    <div class="row row-padding2">
+
         <div class="col col-md-6">
-        </div>
-        @Html.LabelFor(model => model.CollectiveAgreementSpecName, htmlAttributes: new { @class = "control-label col-md-2 display-right-align3" })
-        <div class="col-md-4">
-            @Html.EditorFor(model => model.CollectiveAgreementSpecName, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.CollectiveAgreementSpecName, "", new { @class = "text-danger font-size-11" })
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.CompanyName, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.EditorFor(model => model.CompanyName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CompanyName, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.CompanyOrganisationNumber, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.EditorFor(model => model.CompanyOrganisationNumber, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CompanyOrganisationNumber, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.CompanyPhoneNumber, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.EditorFor(model => model.CompanyPhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CompanyPhoneNumber, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.StreetAddress, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.EditorFor(model => model.StreetAddress, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.StreetAddress, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.Postcode, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.EditorFor(model => model.Postcode, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Postcode, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.City, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.City, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.AccountNumber, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.EditorFor(model => model.AccountNumber, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.AccountNumber, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.CollectiveAgreements, htmlAttributes: new { @class = "control-label col-md-4 display-right-align3" })
+                <div class="col-md-8 padding-top-7">
+                    @Html.DropDownListFor(model => model.SelectedCollectiveAgreementId, new SelectList(Model.CollectiveAgreements, "Value", "Text", Model.SelectedCollectiveAgreementId), new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CollectiveAgreements, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.CollectiveAgreementSpecName, htmlAttributes: new { @class = "control-label col-md-4 display-right-align3" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.CollectiveAgreementSpecName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CollectiveAgreementSpecName, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
         </div>
     </div>
 
