--- a/Sjuklöner/Views/Shared/_Layout.cshtml
+++ b/Sjuklöner/Views/Shared/_Layout.cshtml
@@ -134,10 +134,10 @@
             <hr />
             <footer>
                 <div class="row">
-                    <div class="col col-md-11 small-font padding-left-no-claim">
+                    <div class="col col-md-10 small-font padding-left-no-claim2">
                         <p>Vård- och omsorgsförvaltningen i Helsingborgs kommun</p>
                     </div>
-                    <div class="col col-md-1 small-font">
+                    <div class="col col-md-2 small-font display-right-align">
                         &copy; Bitoreq AB
                     </div>
 
