--- a/Sjuklöner/Content/Site.css
+++ b/Sjuklöner/Content/Site.css
@@ -950,6 +950,14 @@ special-left-margin {
     width: 92px;
 }
 
+.padding-top-7 {
+    padding-top: 7px;
+}
+
+.col-small-margin-left {
+    margin-left: 3px;
+}
+
 .col-margin-left {
     margin-left: 7px;
 }
@@ -1450,6 +1458,14 @@ a:hover, a:focus {
 
 .padding-left-no-claim {
     padding-left: 5px;
+}
+
+.padding-left-no-claim2 {
+    padding-left: 15px;
+}
+
+.padding-left-55 {
+    padding-left: 55px;
 }
 
 .no-breadcrumb-top {
