--- a/Sjuklöner/Views/Assistants/Create.cshtml
+++ b/Sjuklöner/Views/Assistants/Create.cshtml
@@ -18,75 +18,83 @@
     </div>
     <hr class="claim-divider" />
     <div class="row row-padding2">
-        <div>
-            @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
-            <div class="col col-md-4">
-                @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger font-size-11" })
+        <div class="col col-md-6">
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-4 display-right-align3" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.AssistantSSN, htmlAttributes: new { @class = "control-label col-md-4 display-right-align3" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.AssistantSSN, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.AssistantSSN, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-4 display-right-align3" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-4 display-right-align3" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger font-size-11" })
+                </div>
             </div>
         </div>
-        <div>
-            @Html.LabelFor(model => model.HourlySalary, htmlAttributes: new { @class = "control-label col col-md-3 display-right-align3" })
-            <div class="col col-md-2">
-                @Html.EditorFor(model => model.HourlySalary, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.HourlySalary, "", new { @class = "text-danger font-size-11" })
+
+        <div class="col col-md-6">
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.HourlySalary, htmlAttributes: new { @class = "control-label col col-md-6 display-right-align3" })
+                <div class="col col-md-4">
+                    @Html.EditorFor(model => model.HourlySalary, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.HourlySalary, "", new { @class = "text-danger font-size-11" })
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="row row-padding2">
-        <div>
-            @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2 display-right-align3" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger font-size-11" })
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.HolidayPayRate, htmlAttributes: new { @class = "control-label col-md-6 display-right-align3" })
+                <div class="col-md-4">
+                    @Html.EditorFor(model => model.HolidayPayRate, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.HolidayPayRate, "", new { @class = "text-danger font-size-11" })
+                </div>
             </div>
-        </div>
-        <div>
-            @Html.LabelFor(model => model.HolidayPayRate, htmlAttributes: new { @class = "control-label col-md-3 display-right-align3" })
-            <div class="col-md-2">
-                @Html.EditorFor(model => model.HolidayPayRate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.HolidayPayRate, "", new { @class = "text-danger font-size-11" })
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.PayrollTaxRate, htmlAttributes: new { @class = "control-label col-md-6 display-right-align3" })
+                <div class="col-md-4">
+                    @Html.EditorFor(model => model.PayrollTaxRate, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.PayrollTaxRate, "", new { @class = "text-danger font-size-11" })
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="row row-padding2">
-        <div>
-            @Html.LabelFor(model => model.AssistantSSN, htmlAttributes: new { @class = "control-label col-md-2 display-right-align3" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.AssistantSSN, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AssistantSSN, "", new { @class = "text-danger font-size-11" })
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.PensionAndInsuranceRate, htmlAttributes: new { @class = "control-label col-md-6 display-right-align3" })
+                <div class="col-md-4">
+                    @Html.EditorFor(model => model.PensionAndInsuranceRate, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.PensionAndInsuranceRate, "", new { @class = "text-danger font-size-11" })
+                </div>
             </div>
-        </div>
-        <div>
-            @Html.LabelFor(model => model.PayrollTaxRate, htmlAttributes: new { @class = "control-label col-md-3 display-right-align3" })
-            <div class="col-md-2">
-                @Html.EditorFor(model => model.PayrollTaxRate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PayrollTaxRate, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-    </div>
-    <div class="row row-padding2">
-        <div>
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2 display-right-align3" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-        <div>
-            @Html.LabelFor(model => model.PensionAndInsuranceRate, htmlAttributes: new { @class = "control-label col-md-3 display-right-align3" })
-            <div class="col-md-2">
-                @Html.EditorFor(model => model.PensionAndInsuranceRate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PensionAndInsuranceRate, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-    </div>
-    <div class="row row-padding2">
-        <div>
-            @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2 display-right-align3" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger font-size-11" })
+
+            <div class="row row-padding2 padding-left-55">
+                De förifyllda procentsatserna för semesterersättning, arbetsgivaravgifter och summan av pensioner och försäkringar är typiska värden. I verkligheten varierar de beroende på t. ex. kollektivavtal och assistentens ålder. Vänligen kontrollera ditt avtal och uppdatera därefter procentsatserna om andra värden gäller för denna assistent.
             </div>
         </div>
     </div>
