Added explanation of Input Format for 'Arbetstid'

--- a/Sjuklöner/Views/Claims/Create2.cshtml
+++ b/Sjuklöner/Views/Claims/Create2.cshtml
@@ -68,7 +68,7 @@
                         <div class="row negative-padding-top">
                             <div class="col col-md-8 div-frame line-height-08 div-margin-left">
                                 <div5 class="row height-18 role-padding line-height-08">
-                                    Arbetstid
+                                    Arbetstid, antal timmar i decimalformat (t.ex. 8,50 = 8 timmar + 30 minuter)
                                 </div5>
                                 <div6 class="row height-14 line-height-04">
                                     <div class="col col-md-2 bold-14 col-md-nopadding">
@@ -220,7 +220,7 @@
                         <div class="row negative-padding-top">
                             <div class="col col-md-8 div-frame line-height-08 div-margin-left">
                                 <div5 class="row height-18 role-padding line-height-08">
-                                    Arbetstid
+                                    Arbetstid, antal timmar i decimalformat (t.ex. 8,50 = 8 timmar + 30 minuter)
                                 </div5>
                                 <div6 class="row height-14 line-height-04">
                                     <div class="col col-md-2 bold-14 col-md-nopadding">
