--- a/Sjuklöner/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/Sjuklöner/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -7,7 +7,7 @@
 </hgroup>
 <div>
     <p>
-        Please check your email to reset your password.
+        Vänligen se din e-post för att återställa ditt lösenord.
     </p>
 </div>
 	
