--- a/Sjuklöner/Views/Assistants/Create.cshtml
+++ b/Sjuklöner/Views/Assistants/Create.cshtml
@@ -94,7 +94,7 @@
             </div>
 
             <div class="row row-padding2 padding-left-55">
-                De förifyllda procentsatserna för semesterersättning, arbetsgivaravgifter och summan av pensioner och försäkringar är typiska värden. I verkligheten varierar de beroende på t. ex. kollektivavtal och assistentens ålder. Vänligen kontrollera ditt avtal och uppdatera därefter procentsatserna om andra värden gäller för denna assistent.
+                Vänligen kontrollera med kollektivavtalet att de förifyllda procentsatserna gäller för denna assistent. Om de inte gäller måste du uppdatera värdena.
             </div>
         </div>
     </div>
