--- a/Sjuklöner/Views/Claims/Create3.cshtml
+++ b/Sjuklöner/Views/Claims/Create3.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Sjuklöner.Viewmodels.Create3VM
 @using Newtonsoft.Json
-
 @{
-    ViewBag.Title = "Create3";
-}
+                /**/
 
+                ViewBag.Title = "Create3";
+}
 <div class="row margin-breadcrumb">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
@@ -15,7 +15,6 @@
         </ol>
     </nav>
 </div>
-
 @using (Html.BeginForm("Create3", "Claims", new { refNumber = Model.ClaimNumber }, FormMethod.Post))
 {
     @Html.AntiForgeryToken()
@@ -31,44 +30,44 @@
     </div>
     <div class="row">
         <p class="col col-md-2"></p>
-        <p class="col col-md-10 second-page-header2">Steg 3 av 4: Ange belopp</p>
-    </div>
+        <p class="col col-md-4 second-page-header2">Steg 3 av 4: Ange belopp</p>
+        @if (Model.ShowCalculatedValues == true)
+        {
+            <p class="col col-md-6 second-page-header2">Dom förifyllda beloppen är kontrollbelopp baserade på antal timmar och gällande kollektivavtal</p>
+        }    
+    </div>   
 
     <div class="row">
         <div class="form-horizontal">
             @Html.ValidationSummary(true, "", new { @class = "text-danger font-size-11" })
             <div class="form-group">
                 @Html.LabelFor(model => model.SickPay, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                <div class="col-md-4">
                     @Html.EditorFor(model => model.SickPay, new { htmlAttributes = new { @class = "form-control", @placeholder = Model.SickPay, id = "sickpay", onchange = "calculateSum()", onblur = "calculateSum()" } })
                     @Html.ValidationMessageFor(model => model.SickPay, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
-
             <div class="form-group">
                 @Html.LabelFor(model => model.HolidayPay, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                <div class="col-md-4">
                     @Html.EditorFor(model => model.HolidayPay, new { htmlAttributes = new { @class = "form-control", @placeholder = Model.HolidayPay, id = "holidaypay", onchange = "calculateSum()", onblur = "calculateSum()" } })
                     @Html.ValidationMessageFor(model => model.HolidayPay, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
-
             <div class="form-group">
                 @Html.LabelFor(model => model.SocialFees, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                <div class="col-md-4">
                     @Html.EditorFor(model => model.SocialFees, new { htmlAttributes = new { @class = "form-control", @placeholder = Model.SocialFees, id = "socialfees", onchange = "calculateSum()", onblur = "calculateSum()" } })
                     @Html.ValidationMessageFor(model => model.SocialFees, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
-
             <div class="form-group">
                 @Html.LabelFor(model => model.PensionAndInsurance, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                <div class="col-md-4">
                     @Html.EditorFor(model => model.PensionAndInsurance, new { htmlAttributes = new { @class = "form-control align-bottom2", @placeholder = Model.PensionAndInsurance, id = "pensionandinsurance", onchange = "calculateSum()", onblur = "calculateSum()" } })
                     @Html.ValidationMessageFor(model => model.PensionAndInsurance, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
-
             <div class="form-group">
                 @Html.LabelFor(model => model.ClaimSum, htmlAttributes: new { @class = "control-label control-label-large col-md-2" })
                 <div class="col-md-10 align-bottom3 display-large-font1" id="claimamount">
@@ -76,23 +75,22 @@
                     @Html.ValidationMessageFor(model => model.ClaimSum, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
+        </div>
 
+        @*@if (Model.Rejected)
+            {
+                <div class="row">
+                    <p class="col col-md-2"></p>
+                    <p class="col col-md-10">@Model.RejectReason</p>
+                </div>
+            }*@
 
-
-            @*@if (Model.Rejected)
-                {
-                    <div class="row">
-                        <p class="col col-md-2"></p>
-                        <p class="col col-md-10">@Model.RejectReason</p>
-                    </div>
-                }*@
-
-
-            @*<div>
-                    @Html.ActionLink("Spara", "SaveAmounts", "Claims", new { sickPay = parSickPay, parHolidayPay = Model.HolidayPay,
-                                    parSocialFees = Model.SocialFees, parPensionAndInsurance = Model.PensionAndInsurance, parClaimSum = Model.ClaimSum,
-                                    parClaimReference = Model.ReferenceNumber }, new { @class = "btn btn-default" })
-                </div>*@
+        @*<div>
+                @Html.ActionLink("Spara", "SaveAmounts", "Claims", new { sickPay = parSickPay, parHolidayPay = Model.HolidayPay,
+                                parSocialFees = Model.SocialFees, parPensionAndInsurance = Model.PensionAndInsurance, parClaimSum = Model.ClaimSum,
+                                parClaimReference = Model.ReferenceNumber }, new { @class = "btn btn-default" })
+            </div>*@
+        <div>
             <div class="row">
                 <div class="small-padding-left3 col col-md-offset-2 col-md-1">
                     @*<input class="btn btn-primary btn-primary-small" type="submit" name="submitButton" value="Skicka in" id="assistance-claim-btn" />*@
