Fault Correction in Register View. Now it's possible to register new users and companies again.

--- a/Sjuklöner/Views/Account/Register.cshtml
+++ b/Sjuklöner/Views/Account/Register.cshtml
@@ -34,8 +34,8 @@
             <div class="row row-padding2">
                 @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
                 <div class="col col-md-8">
-                    @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger font-size-11" })
+                    @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
 
