--- a/Sjuklöner/Views/Manage/SetPassword.cshtml
+++ b/Sjuklöner/Views/Manage/SetPassword.cshtml
@@ -1,19 +1,18 @@
 ﻿@model Sjuklöner.Models.SetPasswordViewModel
 @{
-    ViewBag.Title = "Create Password";
+    ViewBag.Title = "Skapa Lösenord";
 }
 
 <h2>@ViewBag.Title.</h2>
 <p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
+    Du har inte ett användarnamn/lösenord för denna webbplats. Lägg till et lokalt konto, så att du kan logga på utan externa inloggningar.
 </p>
 
 @using (Html.BeginForm("SetPassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
 
-    <h4>Create Local Login</h4>
+    <h4>Skapa Inloggning</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger font-size-11" })
     <div class="form-group">
