--- a/Sjuklöner/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/Sjuklöner/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Sjuklöner.Models.VerifyPhoneNumberViewModel
 @{
-    ViewBag.Title = "Verify Phone Number";
+    ViewBag.Title = "Bekräfta Telefonnummer";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -9,7 +9,7 @@
 {
     @Html.AntiForgeryToken()
     @Html.Hidden("phoneNumber", @Model.PhoneNumber)
-    <h4>Enter verification code</h4>
+    <h4>Skriv in bekräftelsekoden</h4>
     <h5>@ViewBag.Status</h5>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger font-size-11" })
@@ -21,7 +21,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Submit" />
+            <input type="submit" class="btn btn-default" value="Skicka" />
         </div>
     </div>
 }
