--- a/Sjuklöner/Views/Manage/AddPhoneNumber.cshtml
+++ b/Sjuklöner/Views/Manage/AddPhoneNumber.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Sjuklöner.Models.AddPhoneNumberViewModel
 @{
-    ViewBag.Title = "Phone Number";
+    ViewBag.Title = "Telefonnummer";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -8,7 +8,7 @@
 @using (Html.BeginForm("AddPhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Add a phone number</h4>
+    <h4>Lägg till ett telefonnummer</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger font-size-11" })
     <div class="form-group">
@@ -19,7 +19,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Submit" />
+            <input type="submit" class="btn btn-default" value="Spara" />
         </div>
     </div>
 }
