--- a/Sjuklöner/Views/Manage/ChangePassword.cshtml
+++ b/Sjuklöner/Views/Manage/ChangePassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Sjuklöner.Models.ChangePasswordViewModel
 @{
-    ViewBag.Title = "Change Password";
+    ViewBag.Title = "Ändra Lösenord";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -8,7 +8,7 @@
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
+    <h4>Formulär för att ändra lösenord</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger font-size-11" })
     <div class="form-group">
@@ -31,7 +31,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Change password" class="btn btn-default" />
+            <input type="submit" value="Ändra Lösenord" class="btn btn-default" />
         </div>
     </div>
 }
