--- a/Sjuklöner/Views/Account/Register.cshtml
+++ b/Sjuklöner/Views/Account/Register.cshtml
@@ -66,7 +66,7 @@
             <div class="row row-padding2">
                 @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
                 <div class="col col-md-8">
-                    @Html.PasswordFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.PasswordFor(model => model.Password, new { @class = "form-control" } )
                     @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
@@ -74,7 +74,7 @@
             <div class="row row-padding2">
                 @Html.LabelFor(model => model.ConfirmPassword, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
                 <div class="col col-md-8">
-                    @Html.PasswordFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.PasswordFor(model => model.ConfirmPassword, new { @class = "form-control" } )
                     @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
@@ -140,7 +140,7 @@
             <div class="row row-padding2">
                 @Html.LabelFor(model => model.CollectiveAgreements, htmlAttributes: new { @class = "control-label col-md-4 display-right-align3" })
                 <div class="col-md-8 padding-top-7">
-                    @Html.DropDownListFor(model => model.SelectedCollectiveAgreementId, new SelectList(Model.CollectiveAgreements, "Value", "Text", Model.SelectedCollectiveAgreementId), new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.DropDownListFor(model => model.SelectedCollectiveAgreementId, new SelectList(Model.CollectiveAgreements, "Value", "Text", Model.SelectedCollectiveAgreementId), new  { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.CollectiveAgreements, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>
