--- a/Sjuklöner/Views/Claims/Create1.cshtml
+++ b/Sjuklöner/Views/Claims/Create1.cshtml
@@ -8,7 +8,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item breadcrumb-font">@Html.ActionLink("Ansökningar", "Index", null, new { @class = "breadcrumb-padding" })</li>
-            <li class="breadcrumb-item active breadcrumb-font breadcrumb-padding" aria-current="page">Sjukperiod</li>
+            <li class="breadcrumb-item active breadcrumb-font breadcrumb-padding" aria-current="page">Personuppgifter och sjukperiod</li>
         </ol>
     </nav>
 </div>
@@ -33,10 +33,84 @@
         <p class="col col-md-10 second-page-header2">Steg 1 av 4: Ange personuppgifter och sjukperiod</p>
     </div>
 
+
+    <div class="row">
+        @Html.ValidationSummary(true, "", new { @class = "text-danger font-size-11" })
+        <div class="col col-md-6">
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.CustomerName, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8 col-small-left-padding">
+                    @Html.EditorFor(model => model.CustomerName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CustomerName, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.CustomerSSN, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8 col-small-left-padding">
+                    @Html.EditorFor(model => model.CustomerSSN, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CustomerSSN, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.CustomerAddress, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8 col-small-left-padding">
+                    @Html.EditorFor(model => model.CustomerAddress, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CustomerAddress, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.CustomerPhoneNumber, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8 col-small-left-padding">
+                    @Html.EditorFor(model => model.CustomerPhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CustomerPhoneNumber, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+        </div>
+
+        <div class="col col-md-6">
+            <div class="row">
+                @Html.LabelFor(model => model.RegularAssistants, htmlAttributes: new { @class = "control-label col-md-4 display-right-align3" })
+                <div class="col-md-8">
+                    @Html.DropDownListFor(model => model.SelectedRegAssistantId, new SelectList(Model.RegularAssistants, "Value", "Text", Model.SelectedRegAssistantId), "- ingen vald -", new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.RegularAssistants, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.SubstituteAssistants, htmlAttributes: new { @class = "control-label col-md-4 display-right-align3" })
+                <div class="col-md-8">
+                    @Html.DropDownListFor(model => model.SelectedSubAssistantId, new SelectList(Model.SubstituteAssistants, "Value", "Text", Model.SelectedSubAssistantId), "- ingen vald -", new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.SubstituteAssistants, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.FirstDayOfSicknessDate, htmlAttributes: new { @class = "control-label col-md-4 display-right-align3" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.FirstDayOfSicknessDate, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.FirstDayOfSicknessDate, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.LastDayOfSicknessDate, htmlAttributes: new { @class = "control-label col-md-4 display-right-align2" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.LastDayOfSicknessDate, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.LastDayOfSicknessDate, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
     <div class="row">
         @*<div class="form-horizontal">*@
 
-        @Html.ValidationSummary(true, "", new { @class = "text-danger font-size-11" })
 
         @*ORGANISATIONNUMBER NEEDED IN DEMO MODE!!!
                 <div class="form-group">
@@ -46,72 +120,6 @@
                     @Html.ValidationMessageFor(model => model.OrganisationNumber, "", new { @class = "text-danger font-size-11" })
                 </div>
             </div>*@
-        <div class="row row-padding2">
-            <div>
-                @Html.LabelFor(model => model.CustomerName, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
-                <div class="col col-md-4">
-                    @Html.EditorFor(model => model.CustomerName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.CustomerName, "", new { @class = "text-danger font-size-11 font-size-11" })
-                </div>
-            </div>
-            <div>
-                @Html.LabelFor(model => model.RegularAssistants, htmlAttributes: new { @class = "control-label col-md-2 display-right-align3" })
-                <div class="col-md-4">
-                    @Html.DropDownListFor(model => model.SelectedRegAssistantId, new SelectList(Model.RegularAssistants, "Value", "Text", Model.SelectedRegAssistantId), "- ingen vald -", new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.RegularAssistants, "", new { @class = "text-danger font-size-11" })
-                </div>
-            </div>
-        </div>
-        <div class="row row-padding2">
-            <div>
-                @Html.LabelFor(model => model.CustomerSSN, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
-                <div class="col col-md-4">
-                    @Html.EditorFor(model => model.CustomerSSN, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.CustomerSSN, "", new { @class = "text-danger font-size-11" })
-                </div>
-            </div>
-            <div>
-                @Html.LabelFor(model => model.SubstituteAssistants, htmlAttributes: new { @class = "control-label col-md-2 display-right-align3" })
-                <div class="col-md-4">
-                    @Html.DropDownListFor(model => model.SelectedSubAssistantId, new SelectList(Model.SubstituteAssistants, "Value", "Text", Model.SelectedSubAssistantId), "- ingen vald -", new { htmlAttributes = new { @class = "form-control" } })
-                    @*@Html.ValidationMessageFor(model => model.SelectedSubAssistantId, "", new { @class = "text-danger font-size-11" })*@
-                    @*@Html.ValidationMessage("SelectedSubAssistantId", "Ingen vald", new { @class = "text-danger font-size-11" })*@
-                    @Html.ValidationMessageFor(model => model.SubstituteAssistants, "", new { @class = "text-danger font-size-11" })
-                </div>
-            </div>
-        </div>
-        <div class="row row-padding2">
-            <div>
-                @Html.LabelFor(model => model.CustomerAddress, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
-                <div class="col col-md-4">
-                    @Html.EditorFor(model => model.CustomerAddress, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.CustomerAddress, "", new { @class = "text-danger font-size-11" })
-                </div>
-            </div>
-            <div>
-                @Html.LabelFor(model => model.FirstDayOfSicknessDate, htmlAttributes: new { @class = "control-label col-md-2 display-right-align3" })
-                <div class="col-md-4">
-                    @Html.EditorFor(model => model.FirstDayOfSicknessDate, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.FirstDayOfSicknessDate, "", new { @class = "text-danger font-size-11" })
-                </div>
-            </div>
-        </div>
-        <div class="row row-padding2">
-            <div>
-                @Html.LabelFor(model => model.CustomerPhoneNumber, htmlAttributes: new { @class = "control-label col col-md-2 display-right-align3" })
-                <div class="col col-md-4">
-                    @Html.EditorFor(model => model.CustomerPhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.CustomerPhoneNumber, "", new { @class = "text-danger font-size-11" })
-                </div>
-            </div>
-            <div>
-                @Html.LabelFor(model => model.LastDayOfSicknessDate, htmlAttributes: new { @class = "control-label col-md-2 display-right-align2" })
-                <div class="col-md-4">
-                    @Html.EditorFor(model => model.LastDayOfSicknessDate, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.LastDayOfSicknessDate, "", new { @class = "text-danger font-size-11" })
-                </div>
-            </div>
-        </div>
 
         @*EMAIL OPTIONALLY NEEDED IN DEMO MODE!
             <div class="form-group">
@@ -185,18 +193,18 @@
             $('#myModal').modal('hide');
         });
     });
-    //$('#loadPartialActionLink').on('click', function (e) {
-    //    e.preventDefault();
-    //    var claimNumber = document.getElementById("claimnumber");
-    //    $.ajax({
-    //        type: "GET",
-    //        url: '/Claims/_ShowClaim',
-    //        data: {
-    //            refNumber: claimNumber.innerHTML
-    //        },
-    //        success: function (data, textStatus, jqXHR) {
-    //            $('#AJAXContainer').html(data);
-    //        }
-    //    });
-    //});
+            //$('#loadPartialActionLink').on('click', function (e) {
+            //    e.preventDefault();
+            //    var claimNumber = document.getElementById("claimnumber");
+            //    $.ajax({
+            //        type: "GET",
+            //        url: '/Claims/_ShowClaim',
+            //        data: {
+            //            refNumber: claimNumber.innerHTML
+            //        },
+            //        success: function (data, textStatus, jqXHR) {
+            //            $('#AJAXContainer').html(data);
+            //        }
+            //    });
+            //});
 </script>
