Adjusted code in ClaimsController for handling date information about decision for personal assistance. Only dates with a vlid decision shall be included in model sum calculation. Added more code to admin of AdmOffs for admin role.

--- a/Sjuklöner/Views/Account/IndexAdmOff.cshtml
+++ b/Sjuklöner/Views/Account/IndexAdmOff.cshtml
@@ -59,8 +59,8 @@
                 </td>
                 <td>
                     @Html.ActionLink("Uppdatera", "EditAdmOff", new { id = item.Id }) |
-                    @Html.ActionLink("Detaljer", "DetailsOmbud", new { id = item.Id }) |
-                    @Html.ActionLink("Ta bort", "DeleteOmbud", new { id = item.Id })
+                    @Html.ActionLink("Detaljer", "DetailsAdmOff", new { id = item.Id }) |
+                    @Html.ActionLink("Ta bort", "DeleteAdmOff", new { id = item.Id })
                 </td>
             </tr>
         }
