Implemented User Story : Administrate Care Companies for Admin

--- a/Sjuklöner/Views/Assistants/Details.cshtml
+++ b/Sjuklöner/Views/Assistants/Details.cshtml
@@ -92,7 +92,7 @@
     </dl>
 </div>
 <div class="row">
-    <div class="col col-md-offset-2 col-md-1 col-no-left-padding">
+    <div class="col col-md-1 col-no-left-padding">
     @if (User.IsInRole("Admin"))
     {
         @Html.ActionLink("Tillbaka", "IndexAllCompanies", null, new { @class = "btn btn-primary btn-primary-small" })
