--- a/Sjuklöner/Views/CareCompanies/Create.cshtml
+++ b/Sjuklöner/Views/CareCompanies/Create.cshtml
@@ -1,97 +1,106 @@
-﻿@model Sjuklöner.Models.CareCompany
+﻿@model Sjuklöner.Viewmodels.CareCompanyCreateVM
+@using Sjuklöner.Models
 
 @{
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger font-size-11" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.CompanyName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CompanyName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CompanyName, "", new { @class = "text-danger font-size-11" })
+    @Html.AntiForgeryToken()   
+    <div class="row">
+        <p class="col col-md-2"></p>
+        <p class="page-header7 col col-md-10">Lägg till assistansbolag</p>
+    </div>
+    <div class="row">
+        <p class="col col-md-2"></p>
+        <p class="col col-md-10">Uppgifterna används vid ansökan om sjuklöneersättning</p>
+    </div>
+    <hr class="claim-divider" />
+    <div class="row row-padding2">
+        <div class="col col-md-6">
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.CompanyName, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.EditorFor(model => model.CompanyName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CompanyName, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.OrganisationNumber, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.EditorFor(model => model.OrganisationNumber, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.OrganisationNumber, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.StreetAddress, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.EditorFor(model => model.StreetAddress, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.StreetAddress, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.Postcode, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.EditorFor(model => model.Postcode, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Postcode, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.City, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.City, "", new { @class = "text-danger font-size-11" })
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.OrganisationNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.OrganisationNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.OrganisationNumber, "", new { @class = "text-danger font-size-11" })
+        <div class="col col-md-6">
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.AccountNumber, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.EditorFor(model => model.AccountNumber, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.AccountNumber, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.CompanyPhoneNumber, htmlAttributes: new { @class = "control-label col col-md-4 display-right-align3" })
+                <div class="col col-md-8">
+                    @Html.EditorFor(model => model.CompanyPhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CompanyPhoneNumber, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.CollectiveAgreements, htmlAttributes: new { @class = "control-label col-md-4 display-right-align3" })
+                <div class="col-md-8 padding-top-7">
+                    @Html.DropDownListFor(model => model.SelectedCollectiveAgreementId, new SelectList(Model.CollectiveAgreements, "Value", "Text", Model.SelectedCollectiveAgreementId), new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.CollectiveAgreements, "", new { @class = "text-danger font-size-11" })
+                </div>
+            </div>
+
+            <div class="row row-padding2">
+                @Html.LabelFor(model => model.CollectiveAgreementSpecName, htmlAttributes: new { @class = "control-label col-md-4 display-right-align3" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.CollectiveAgreementSpecName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.CollectiveAgreementSpecName, "", new { @class = "text-danger font-size-11" })
+                </div>
             </div>
         </div>
+    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.StreetAddress, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.StreetAddress, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.StreetAddress, "", new { @class = "text-danger font-size-11" })
-            </div>
+    <div class="row row-padding2">
+        <div class="col col-md-offset-2 col-md-1">
+            <input class="btn btn-primary btn-primary-small" type="submit" name="submitButton" value="Spara" id="proceed" />
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Postcode, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Postcode, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Postcode, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.City, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.City, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.AccountNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.AccountNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AccountNumber, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CompanyPhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CompanyPhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CompanyPhoneNumber, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.SelectedCollectiveAgreementId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.SelectedCollectiveAgreementId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SelectedCollectiveAgreementId, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CollectiveAgreementSpecName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CollectiveAgreementSpecName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CollectiveAgreementSpecName, "", new { @class = "text-danger font-size-11" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-2">
-                <input type="submit" value="Spara" class="btn btn-primary btn-primary-small" />
-            </div>
-            <div class="col col-md-2">
-                @Html.ActionLink("Avbryt", "Index", "CareCompanies", null, new { @class = "btn btn-secondary btn-secondary-small" })
-            </div>
+        <div class="col col-md-2">
+            @Html.ActionLink("Avbryt", "Index", "CareCompanies", null, new { @class = "btn btn-secondary btn-secondary-small" })
         </div>
     </div>
 }
