--- a/Sjuklöner/Views/CareCompanies/Index.cshtml
+++ b/Sjuklöner/Views/CareCompanies/Index.cshtml
@@ -1,14 +1,20 @@
 ﻿@model IEnumerable<Sjuklöner.Models.CareCompany>
-
 @{
     ViewBag.Title = "Index";
 }
+<div class="row">
+    <p class="page-header5 col col-md-12">Lista över alla Assistansbolag</p>
+</div>
+<br />
+<div class="row">
+    <div class="col col-md-1">
+        @Html.ActionLink("Nytt bolag", "Create", null, new { @class = "btn btn-primary btn-primary3" })
+    </div>
+</div>
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<br />
+<hr class="claim-divider" />
+<br />
 <table class="table">
     <tr>
         <th>
@@ -31,51 +37,39 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.CompanyPhoneNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SelectedCollectiveAgreementId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CollectiveAgreementSpecName)
-        </th>
+        </th>        
         <th></th>
     </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.CompanyName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.OrganisationNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StreetAddress)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Postcode)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.City)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AccountNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CompanyPhoneNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SelectedCollectiveAgreementId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CollectiveAgreementSpecName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
-
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.CompanyName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.OrganisationNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.StreetAddress)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Postcode)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.City)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AccountNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CompanyPhoneNumber)
+            </td>           
+            <td>
+                @Html.ActionLink("Uppdatera", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Detaljer", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Ta bort", "Delete", new { id = item.Id })                                
+            </td>          
+        </tr>
+    }
 </table>
+
